# seraphine

./: .gitignore  Cargo.toml  build.rs  x86-64-seraphine.json
.cargo/: config.toml
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/src/: lib.rs  logger.rs  main.rs  serial.rs
kernel/src/arch/: gdt.rs  interrupts.rs
kernel/src/filesystem/: nvme.rs
kernel/src/hardware/: framebuffer.rs  mod.rs  pci.rs  vga.rs  vga_buffer.rs
kernel/src/mem/: allocator.rs  memory.rs  mod.rs
kernel/src/task/: keyboard.rs  simple_executor.rs
kernel/tests/: heap_allocation.rs  should_panic.rs  stack_overflow.rs
src/: gdt.rs  interrupts.rs  lib.rs  logger.rs  main.rs  memory.rs  vga_buffer.rs
src/arch/: interrupts.rs
src/filesystem/: mod.rs  nvme.rs
src/hardware/: HPET.rs  PCI.rs  RSDP.rs  mod.rs  pci.rs  pit.rs
src/mem/: allocator.rs  memory.rs
src/task/: executor.rs  keyboard.rs
tests/: basic_boot.rs  heap_allocation.rs
