[package]
name = "seraphine"         # or any other name
version = "0.1.0"
edition = "2021"

[build-dependencies]
bootloader = "0.11"
seraphine-kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }

[dependencies]
# used for UEFI booting in QEMU
ovmf-prebuilt = "0.1.0-alpha.1"

[workspace]
members = ["kernel"]

[profile.dev]
codegen-units = 1
incremental = false
opt-level = 0
overflow-checks = false
rpath = false

[profile.release]
codegen-units = 1
incremental = false
lto = "fat"
overflow-checks = false
rpath = false

[unstable]
build-std = ["core", "compiler_builtins", "alloc"]
build-std-features = ["compiler-builtins-mem"]