[package]
name = "seraphine-kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
x86_64 = "0.14.2"
uart_16550 = "0.3.1"
pic8259 = "0.11.0"
pc-keyboard = "0.8.0"
bootloader_api = "0.11"
linked_list_allocator = "0.9.0"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
volatile = "0.3.0"
spin = "0.9.8"
log = "0.4.22"

[dependencies.crossbeam-queue]
version = "0.3.11"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.2.0"
default-features = false

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]

[dependencies.fat32]
version = "0.2"
default-features = false
features = ["512"]

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false